# LunchAndLearn

./: .gitignore  DEMO_GUIDE.md  LunchAndLearn.sln  README.md  UPGRADE_TASK.md
LunchAndLearn/: Issue.cs  IssueDbContext.cs  LunchAndLearn.csproj  LunchAndLearn.http  Priority.cs  Program.cs  appsettings.json  client.py  issues.csv  migrate_db.py  migrate_to_priority.py  pyproject.toml  requirements.txt  seed_database.py  test_client.py
LunchAndLearn.Tests/: IssueDbContextTests.cs  IssueTests.cs  LunchAndLearn.Tests.csproj
LunchAndLearn/Properties/: launchSettings.json
