[project]
name = "lunch-and-learn-tools"
version = "0.1.0"
description = "Python tools for LunchAndLearn application (seeding and API client)"
requires-python = ">=3.8"
dependencies = [
    "pytest>=8.3.5",
    "requests>=2.31.0",
    # Note: sqlite3 is a built-in Python module (standard library)
    # and does not need to be listed as a dependency
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
]

